--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <div id="app"></div>
     <div class='svg'>
-      <svg height='60' width='320' xmlns='http://www.w3.ord/2000/svg'>
-        <rect class='shape' height='60' width='320'/>
-        <div class='text'>Frodope</div>
+      <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
+        <rect class="shape" height="60" width="320" />
+        <div class='text'>FRODOPE</div>
       </svg>
     </div>
     <div class='paragraph'>
