--- a/index.html
+++ b/index.html
@@ -2,41 +2,41 @@
 <html>
   <head>
     <title>rihannah</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
     <div class='svg'>
       <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
         <rect class="shape" height="60" width="320" />
         <div class='text'>FRODOPE</div>
       </svg>
     </div>
-    <div class='paragraph'>
-      <p>
-        'Three Rings for the Elven-kings under the sky,
-      </p>
-      <p>
-          Seven for the Dwarf-lords in their halls of stone,
-      </p>
-      <p>
-        Nine for the Mortal Men doomed to die,
-      </p>
-      <p>
-          One for the Dark Lord on his dark throne
+      <div class='paragraph'>
+        <p>
+          'Three Rings for the Elven-kings under the sky,
         </p>
         <p>
-          In the Land of Mordor where the Shadows lie.
+            Seven for the Dwarf-lords in their halls of stone,
         </p>
         <p>
-          One Ring to rule them all, One Ring to find them,
+          Nine for the Mortal Men doomed to die,
         </p>
         <p>
-          One Ring to bring them all and in the darkness bind them
-        </p>
-        <p>
-          In the Land of Mordor where the Shadows lie'
-        </p>
+            One for the Dark Lord on his dark throne
+          </p>
+          <p>
+            In the Land of Mordor where the Shadows lie.
+          </p>
+          <p>
+            One Ring to rule them all, One Ring to find them,
+          </p>
+          <p>
+            One Ring to bring them all and in the darkness bind them
+          </p>
+          <p>
+            In the Land of Mordor where the Shadows lie'
+          </p>
+        </div>
       </div>
       <script src="bundle.js"></script>
   </body>
