--- a/index.html
+++ b/index.html
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>rihannah</title>
+    <title>frodope</title>
   </head>
   <body>
-    <div id="app">
-    <div class='svg'>
-      <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
-        <rect class="shape" height="60" width="320" />
-        <div class='text'>FRODOPE</div>
-      </svg>
-    </div>
-      <div class='paragraph'>
-        <p>
-          'Three Rings for the Elven-kings under the sky,
-        </p>
-        <p>
-            Seven for the Dwarf-lords in their halls of stone,
-        </p>
-        <p>
-          Nine for the Mortal Men doomed to die,
-        </p>
-        <p>
-            One for the Dark Lord on his dark throne
-          </p>
-          <p>
-            In the Land of Mordor where the Shadows lie.
-          </p>
-          <p>
-            One Ring to rule them all, One Ring to find them,
-          </p>
-          <p>
-            One Ring to bring them all and in the darkness bind them
-          </p>
-          <p>
-            In the Land of Mordor where the Shadows lie'
-          </p>
-        </div>
-      </div>
+    <div id="app"></div>
       <script src="bundle.js"></script>
   </body>
 </html>
