--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>frodope</title>
   </head>
   <body>
+    <div id="title">
+      <h1>sdkfklm</h1>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
