--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>frodope</title>
+    <h1 class="title">sdkfklm</h1>
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
   </head>
   <body>
-    <div id="title">
-      <h1>sdkfklm</h1>
-    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
