--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>frodope</title>
-    <h1 class="title">sdkfklm</h1>
+    <h1 class="title">Birdperson</h1>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   </head>
   <body>
+    <div class="the-svg">
+      <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
+      <rect class="shape" height="60" width="320" />
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
