--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="the-svg">
       <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
-      <rect class="shape" height="60" width="320" />
+        <rect class="shape" height="60" width="320" />
+        <div class="text">ZACH SAUCIER</div>
+      </svg>
     </div>
     <script src="bundle.js"></script>
   </body>
