--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="the-svg">
+    <div class="svg-wrapper">
       <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
         <rect class="shape" height="60" width="320" />
-        <div class="text">ZACH SAUCIER</div>
+        <div class="text">FRODOPE</div>
       </svg>
     </div>
     <script src="bundle.js"></script>
