--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>frodope</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <style>
+    body {
+      background-color: black;
+    }
+    </style>
   </head>
   <body>
     <div class="svg-wrapper">
