--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div class="text">FRODOPE</div>
       </svg>
     </div>
+    <div class="button-wrapper">
+      
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
