--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
       </svg>
     </div>
     <div class="button-wrapper">
-      
+      <p class="cute">
+        'Three Rings for the Elven-kings under the sky, \n
+        Seven for the Dwarf-lords in their halls of stone, \n
+        Nine for the Mortal Men doomed to die, \n
+        One for the Dark Lord on his dark throne \n
+        In the Land of Mordor where the Shadows lie. \n
+        One Ring to rule them all, One Ring to find them, \n
+        One Ring to bring them all and in the darkness bind them \n
+        In the Land of Mordor where the Shadows lie'
+      </p>
     </div>
     <script src="bundle.js"></script>
   </body>
